--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 @font-face {
   font-family: 'NotoSans';
-  src: url('fonts/Montserrat-Thin.ttf') format('truetype');
+  src: url('fonts/NotoSansKR-Regular.otf') format('opentype');
+  unicode-range: U+AC00-D7A3;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('fonts/Montserrat-Thin.ttf') format('truetype');
+  src: url('fonts/Montserrat-Medium.ttf') format('truetype');
+  unicode-range: U+0041-005A,  U+0061-007A;
 }
 
 body {
