--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,15 @@
 @font-face {
   font-family: 'Montserrat';
   src: url('fonts/Montserrat-Medium.ttf') format('truetype');
-  unicode-range: U+0041-005A,  U+0061-007A;
+  unicode-range: U+0041-005A,  U+0061-007A, U+0030-0039;
+}
+
+* {
+  font-family: 'NotoSans', 'Montserrat';
 }
 
 body {
   margin: 0;
-  font-family: 'NotoSans', 'Montserrat';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: 'NotoSans', 'Montserrat';
 }
